# socketcluster-client-cpp

./: CMakeLists.txt  README.md
.github/: cpp-ci.yml
include/: Connection.h  SCClient.h  SocketClusterClient.h
src/: Connection.cpp  ParsingEngine.cpp  SocketClusterClient.cpp
test/: CMakeLists.txt  test.cpp
test/examples/: test.cpp
